--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ cryptography==42.0.8
 Django==5.0.6
 django-cors-headers==4.4.0
 django-rest-knox==4.2.0
+django-rest-passwordreset==1.4.1
 djangorestframework==3.15.2
 pycparser==2.22
 sqlparse==0.5.0
